@@ -13,7 +13,7 @@
                function="DVBAdminGtk" />
       </entries>
 
-      <synchronization required="yes" clock-priority="160"/>
+      <synchronization required="yes" />
 
       <properties>
         <!-- S, T or FILE -->
@@ -28,7 +28,10 @@
 	     pid that we want to use, in the case there may be many -->
 	<property name="audio-pid" type="int" required="false" />
 	<!-- S, T -->
-	<property name="device" type="string" required="false" />
+	<property name="adapter" type="int" required="false" 
+	          description="Adapter number (eg 0 for adapter 0)" />
+	<property name="frontend" type="int" required="false"
+	          description="Frontend number (eg 0 for frontend 0)" />
 	<!-- DVB-T specific properties -->
 	<property name="modulation" type="int" />
 	<property name="trans-mode" type="int" />
